# tezedge-debugger

./: .crates.toml  .crates2.json  .dockerignore  .drone.debugger.yml  .drone.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.light  Dockerfile.memprof  LICENSE  README.md  bench.sh  builder.dockerfile  clean.sh  cleanup_probes.sh  config-docker-new.toml  config-docker.toml  config-drone.toml  config-new.toml  config.toml  debugger_config.toml  docker-compose.memprof.yml  docker-compose.ocaml.test.yml  docker-compose.ocaml.yml  docker-compose.rust.yml  docker-compose.yml  docker.sh  memory-profiler-openapi.json  memprof.dockerfile  memprof.sh  network-recorder-openapi.json  old_proxy.sh  patch_yml.sh  proxy.sh  record-replay.md  run.sh  rustfmt.toml  san.sh  (+3 more)
.cargo/: config.toml
benches/: database.rs  database_old.rs  storage.rs
bpf-common/: Cargo.toml
bpf-common/src/: data_descriptor.rs  facade.rs  lib.rs
bpf-memprof/: Cargo.toml  build.rs
bpf-memprof-common/: Cargo.toml
bpf-memprof-common/src/: client.rs  event.rs  lib.rs
bpf-memprof/src/: client.rs  event.rs  lib.rs  main.rs
bpf-recorder/: Cargo.toml  build.rs
bpf-recorder/src/: address.rs  client.rs  lib.rs  main.rs  send.rs  syscall_context.rs
bpf-ring-buffer/: Cargo.toml
bpf-ring-buffer/src/: lib.rs
bpf-sniffer/: Cargo.toml
bpf-sniffer-common/: Cargo.toml
bpf-sniffer-common/src/: data_descriptor.rs  facade.rs  lib.rs
bpf-sniffer-lib/: Cargo.toml  build.rs
bpf-sniffer-lib/src/: address.rs  app.rs  facade.rs  lib.rs  module.rs  send.rs  syscall_context.rs
bpf-sniffer/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile  Dockerfile.glibc  Dockerfile.poc  README.md  bpf.dockerfile  sniffer.dockerfile
docker/base/: Dockerfile
docker/light-node/: Dockerfile  tezedge.config
docker/node-ocaml/: Dockerfile  config.json
docker/node-rust/: Dockerfile
docker/run/: run.sh
docker/tester/: Dockerfile
docker/tezos/: Dockerfile  config.json
extractor/: Cargo.toml
extractor/src/: main.rs
identity/: identity.json
poc_nfqueue/: Cargo.toml  Dockerfile
poc_nfqueue/src/: main.rs
poc_riker/: .gitignore
poc_riker/src/: main.rs
poc_tokio/: Cargo.toml
poc_tokio/benchmark/: Dockerfile  bench.sh
poc_tokio/src/: main.rs
poc_tokio/src/messages/: mod.rs  tcp_packet.rs
poc_tokio/src/system/: mod.rs  nfqueue_producer.rs  p2p_parser.rs  raw_socket_producer.rs
poc_tokio/src/utility/: decrypter.rs  mod.rs
pseudonode/: Cargo.toml
pseudonode/src/: buffer.rs  handshake.rs  lib.rs
sniffer/: Cargo.toml  build.rs
sniffer/src/: address.rs  bpf_code.rs  data_descriptor.rs  facade.rs  lib.rs  send.rs  syscall_context.rs
src/: configuration.rs  identity.rs  lib.rs  main.rs  msg_decoder.rs  network_message.rs
src/actors/: logs_message.rs  logs_orchestrator.rs  mod.rs  packet_orchestrator.rs  peer.rs  peer_message.rs  peer_processor.rs  rpc_processor.rs
src/endpoints/: log.rs  metric.rs  mod.rs  p2p.rs  report.rs  rpc.rs  stat.rs  version.rs
src/messages/: ack_message.rs  endpoint_message.rs  log_message.rs  metric_message.rs  mod.rs  p2p_message.rs  rpc_message.rs  tcp_packet.rs
src/network/: connection_message.rs  health_checks.rs  mod.rs  msg_decoder.rs  msg_encoder.rs  network_message.rs  remote_client.rs  request_tracker.rs  tun_bridge.rs
src/server/: endpoints.rs  mod.rs
src/storage/: log_storage.rs  metric_storage.rs  mod.rs  node_name_index.rs  p2p_storage.rs  p2p_store.rs  rpc_message.rs  rpc_storage.rs  rpc_store.rs  secondary_index.rs  stat_storage.rs  storage_message.rs
src/storage_/: db_message.rs  local.rs  mod.rs  perf.rs  secondary_index.rs  sorted_intersect.rs  store.rs  store_mpsc.rs  tests.rs
src/system/: bpf_sniffer.rs  logs_orchestrator.rs  metric_alert.rs  metric_collector.rs  mod.rs  notification.rs  orchestrator.rs  p2p.rs  p2p_parser.rs  parser.rs  processor.rs  raw_socket_producer.rs  replayer.rs  reporter.rs  ring_buffer_analyzer.rs  rpc_parser.rs  syslog_producer.rs  utils.rs
src/utility/: decrypter.rs  http_message.rs  identity.rs  ip_settings.rs  mod.rs  p2p_message.rs  pcap_facade.rs  stream.rs  tcp_packet.rs
tester/: Cargo.toml  identity_r.json  log.sh  test.sh  wait_until.sh
tester/src/: buffer.rs  handshake.rs  lib.rs  main.rs
tester/tests/: log.rs  p2p.rs
tests/: README.md  client_identity.json  log_endpoint.rs  metric.rs  metric_endpoints.rs  metrics.rs  metrics_data.json  p2p_endpoint.rs  p2p_endpoints.rs  rpc_endpoint.rs  test_identity.json  test_p2p.rs  wait_until.sh  websocket.rs
tests/common/: mod.rs
tests/ocaml-node-record/: 000024.sst  000025.sst  000026.sst  000027.sst  (+61 more)
tezedge-memprof/: Cargo.toml  openapi.json
tezedge-memprof/src/: history.rs  lib.rs  memory_map.rs  server.rs  stack.rs  state.rs  table.rs
tezedge-memprof/src/collector/: aggregator.rs  consumer.rs  func_path.rs  mod.rs  vm_aggregator.rs
tezedge-memprof/src/history/: abstract_tracker.rs  allocation.rs  allocation_state.rs  error.rs  history.rs  mod.rs  page.rs  page_history.rs  report.rs  tests.rs
tezedge-memprof/tests/: compare.rs  positive.rs
tezedge-recorder/: Cargo.toml  build.rs  identity_i.json  openapi.json  test.sh
tezedge-recorder/src/: common.rs  lib.rs  log_client.rs  main_loop.rs  server.rs  system.rs
tezedge-recorder/src/connection/: chunk_buffer.rs  key.rs  message_parser.rs  mod.rs  processor.rs
tezedge-recorder/src/connection/chunk_parser/: buffer.rs  dump.rs  key.rs  mod.rs  parser.rs  state.rs
tezedge-recorder/src/database/: mock.rs  mod.rs  rocks.rs  rocks_utils.rs  search.rs  sorted_intersect.rs
tezedge-recorder/src/processor/: connection.rs  message_parser.rs  mod.rs
tezedge-recorder/src/processor/chunk_parser/: buffer.rs  key.rs  mod.rs  parser.rs  state.rs
tezedge-recorder/src/tables/: chunk.rs  common.rs  connection.rs  message.rs  mod.rs  node_log.rs  syscall.rs
tezedge-recorder/src/tables/secondary_indexes/: log_level.rs  message_addr.rs  message_initiator.rs  message_sender.rs  message_ty.rs  mod.rs  timestamp.rs
tezedge-recorder/tests/: log.rs  p2p.rs
(+94 files in other folders)
