[workspace]
members = [".", "sniffer", "tester"]

[package]
name = "tezedge_debugger"
version = "0.1.0"
authors = [
    "Martin Lacko <martin.lacko@simplestaking.com>",
    "Vladislav Melnik <vladislav.melnik@simplestaking.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tezedge-debugger"
path = "src/bin/debugger.rs"

[[bench]]
name = "database"
harness = false

[[bench]]
name = "database_old"
harness = false

[dev-dependencies]
ws = "0.9"
url = "2.2"
rand = "0.8"
criterion = "0.3"

[dependencies]
hex = "0.4"
warp = "0.3"
bytes = "1.0"
rocksdb = "0.15"
failure = "0.1"
itertools = "0.10"
structopt = "0.3"
async-trait = "0.1"
strum = { version = "0.20", features = ["derive"] }
chrono = "0.4"
sudo = "0.6"
generic-array = "0.14"

serde_cbor = "0.11"
syslog_loose = "0.10"
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.22"
tracing-subscriber = "0.2.15"

tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3" }
pin-project-lite = "0.2"

crypto = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
storage = { tag = "v1.1.2", git = "htps://github.com/simplestaking/tezedge" }
tezos_encoding = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
networking = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
tezos-conversation = { branch = "develop", git = "https://github.com/simplestaking/tezos-dissector" }

sniffer = { path = "sniffer", features = ["facade"] }

[patch.crates-io]

rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "29802a4b71b8e96a3095b84aadbbea3e39e0d074" }

bpf-sys = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf-probes = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf-macros = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
cargo-bpf = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }

#bpf-sys = { path = "../redbpf/bpf-sys" }
#redbpf = { path = "../redbpf/redbpf" }
#redbpf-probes = { path = "../redbpf/redbpf-probes" }
#redbpf-macros = { path = "../redbpf/redbpf-macros" }
#cargo-bpf = { path = "../redbpf/cargo-bpf" }
