[workspace]
members = [".", "tester", "bpf-sniffer-lib", "bpf-sniffer", "bpf-common", "bpf-ring-buffer"]

[package]
name = "tezedge_debugger"
version = "0.1.0"
authors = [
    "Martin Lacko <martin.lacko@simplestaking.com>",
    "Vladislav Melnik <vladislav.melnik@simplestaking.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tezedge-debugger"
path = "src/bin/debugger.rs"

[[bin]]
name = "tezedge-debugger-db"
path = "src/bin/debugger_db.rs"

[[bin]]
name = "tezedge-debugger-parser"
path = "src/bin/debugger_parser.rs"

[[bench]]
name = "database"
harness = false

[dev-dependencies]
ws = "0.9"
url = "2.2"
rand = "0.8"
criterion = "0.3"

[dependencies]
hex = "0.4"
warp = "0.3"
rocksdb = "0.15"
failure = "0.1"
itertools = "0.10"
strum = { version = "0.20", features = ["derive"] }
chrono = "0.4"
generic-array = "0.14"
smallvec = "1.6"

serde_cbor = "0.11"
syslog_loose = "0.10"
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.22"
tracing-subscriber = "0.2.15"

tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3" }
pin-project-lite = "0.2"

crypto = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
storage = { tag = "v1.1.2", git = "htps://github.com/simplestaking/tezedge" }
tezos_encoding = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
networking = { tag = "v1.1.2", git = "https://github.com/simplestaking/tezedge" }
tezos-conversation = { branch = "develop", git = "https://github.com/simplestaking/tezos-dissector" }

[target.'cfg(target_os = "linux")'.dependencies]
bpf-common = { path = "bpf-common", features = ["std"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[patch.crates-io]

rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "29802a4b71b8e96a3095b84aadbbea3e39e0d074" }

bpf-sys = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf-probes = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
redbpf-macros = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }
cargo-bpf = { git = "https://github.com/simplestaking/redbpf.git", branch = "develop" }

#bpf-sys = { path = "../redbpf/bpf-sys" }
#redbpf = { path = "../redbpf/redbpf" }
#redbpf-probes = { path = "../redbpf/redbpf-probes" }
#redbpf-macros = { path = "../redbpf/redbpf-macros" }
#cargo-bpf = { path = "../redbpf/cargo-bpf" }
