[package]
name = "bpf-memprof-common"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools", branch = "develop", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
passfd = { version = "0.1", optional = true }

[features]
client = ["serde/derive", "ebpf-user", "passfd"]
