[package]
name = "bpf-memprof-common"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[dependencies]
ebpf-user = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
passfd = { version = "0.1", optional = true }

[features]
client = ["serde/derive", "ebpf-user", "passfd"]
