[package]
name = "bpf-memprof"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[lib]
name = "bpf_memprof"
path = "src/lib.rs"

[[bin]]
name = "bpf-memprof-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-memprof-user"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { git = "https://github.com/vlad9486/ebpf-tools", branch = "develop", optional = true }
ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools", branch = "develop", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
passfd = { version = "0.1", optional = true }
sudo = { version = "0.6", optional = true }
ctrlc = { version = "3.1", optional = true }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros"]
user = [
    "ebpf-user/macros",
    "passfd",
    "sudo",
    "ctrlc",
    "tracing",
    "tracing-subscriber",
    "log",
]
client = ["serde/derive", "ebpf-user", "passfd"]
