[package]
name = "bpf-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[lib]
name = "bpf_recorder"
path = "src/lib.rs"

[[bin]]
name = "bpf-recorder-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-recorder"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { version = "0.1.7", optional = true }
typenum = { version = "1.15", optional = true }
ebpf-user = { version = "0.1.6", optional = true }
passfd = { version = "0.1.4", optional = true }
sudo = { version = "0.6.0", optional = true }
ctrlc = { version = "3.2", optional = true }
log = { version = "0.4.14", optional = true }
tracing = { version = "0.1.29", optional = true }
tracing-subscriber = { version = "0.3.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4.3", optional = true }
bpf-ring-buffer = { path = "../bpf-ring-buffer", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros", "typenum"]
user = [
    "ebpf-user/macros",
    "passfd",
    "sudo",
    "ctrlc",
    "log",
    "tracing",
    "tracing-subscriber",
]
client = [
    "serde/derive",
    "ebpf-user",
    "passfd",
    "hex",
    "bpf-ring-buffer",
]
