[package]
name = "bpf-sniffer-lib"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[[bin]]
name = "kprobe"
path = "src/bin/kprobe.rs"
required-features = ["probes"]

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, optional = true }

[dependencies]
# probes
redbpf-macros = { version = "1.3", default-features = false, optional = true }
redbpf-probes = { version = "1.3", default-features = false, optional = true }
cty = { version = "0.2", optional = true }
typenum = { version = "1.12", optional = true }
# facade
redbpf = { version = "1.3", default-features = false, optional = true }
futures = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
passfd = { version = "0.1", optional = true }

[features]
facade = ["cargo-bpf/build", "redbpf/load", "futures", "hex", "passfd"]
probes = ["cargo-bpf/bindings", "redbpf-macros", "redbpf-probes", "cty", "typenum"]
