[package]
name = "poc_nfqueue"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfq = "0.2"
pnet = "0.26"
tokio = { version="0.2", features=["full"] }