[package]
name = "pseudonode"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
crypto = { git = "https://github.com/tezedge/tezedge", branch = "p2p-simulator-fix-dep", version = "=1.7.0" }
tezos_messages = { git = "https://github.com/tezedge/tezedge", branch = "p2p-simulator-fix-dep", version = "=1.7.0" }
tezos_identity = { git = "https://github.com/tezedge/tezedge", branch = "p2p-simulator-fix-dep", version = "=1.7.0" }
