[package]
name = "pseudonode"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
crypto = { branch = "develop", git = "https://github.com/tezedge/tezedge" }
tezos_messages = { branch = "develop", git = "https://github.com/tezedge/tezedge" }
tezos_identity = { branch = "develop", git = "https://github.com/tezedge/tezedge" }
