[package]
name = "tester"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11"
tokio = { version = "1.8", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4" }
tezedge-recorder = { path = "../tezedge-recorder" }
