[package]
name = "tezedge-memprof"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[[bin]]
name = "tezedge-memprof"
path = "src/bin/main.rs"

[dev-dependencies]
reqwest = "0.11"
rand = "0.8"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
elf64 = { git = "https://github.com/vlad9486/elf64.git" }
thiserror = { version = "1.0" }
rustc-demangle = { version = "0.1" }
cpp_demangle = { version = "0.3" }

ctrlc = { version = "3.1" }
tracing-subscriber = "0.2"
tracing = "0.1"

warp = "0.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros"] }

bpf-memprof = { path = "../bpf-memprof", features = ["client"] }
