[package]
name = "tezedge-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "tezedge-recorder"
path = "src/bin/main.rs"

[[bin]]
name = "replayer"
path = "src/bin/replayer.rs"

[[bin]]
name = "replayer-new"
path = "src/bin/replayer_new.rs"

[[bin]]
name = "pseudonode"
path = "src/bin/pseudonode.rs"

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1.8", features = ["full"] }
tezedge-recorder = { path = "../tezedge-recorder" }

[dependencies]
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
rocksdb = "0.15"
tantivy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
either = "1.6"
typenum = "1.13"
syslog_loose = "0.14"
itertools = "0.10"

structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }

ctrlc = "3.1"
tracing-subscriber = "0.2"
tracing = "0.1"

warp = "0.3"
tokio = { version = "1.8", features = ["rt-multi-thread"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bpf-recorder = { path = "../bpf-recorder", features = ["client"] }

crypto = { tag = "v1.6.5", git = "https://github.com/tezedge/tezedge" }
tezos_messages = { tag = "v1.6.5", git = "https://github.com/tezedge/tezedge" }
storage = { tag = "v1.6.5", git = "https://github.com/tezedge/tezedge" }

pseudonode = { path = "../pseudonode" }
