[package]
name = "tezedge-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "tezedge-recorder"
path = "src/bin/main.rs"

[[bin]]
name = "replayer"
path = "src/bin/replayer.rs"

[[bin]]
name = "pseudonode"
path = "src/bin/pseudonode.rs"

[dev-dependencies]
reqwest = "0.11.8"
tokio = { version = "1.15", features = ["full"] }
tezedge-recorder = { path = "../tezedge-recorder" }

[dependencies]
toml = "0.5.8"
serde = "1.0"
serde_json = "1.0"
hex = "0.4.3"
rocksdb = "0.17.0"
tantivy = "0.16.1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.14"
either = "1.6"
typenum = "1.13"
syslog_loose = "0.16.0"
itertools = "0.10.3"

structopt = { version = "0.3.25"}
chrono = { version = "0.4.19" }
rand = { version = "0.8.4", features = ["small_rng"] }

ctrlc = "3.1"
tracing-subscriber = "0.3.5"
tracing = "0.1.29"

warp = "0.3.2"
tokio = { version = "1.15", features = ["rt-multi-thread"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bpf-recorder = { path = "../bpf-recorder", features = ["client"] }

crypto = { tag = "v2.1.0", git = "https://github.com/tezedge/tezedge" }
tezos_messages = { tag = "v2.1.0", git = "https://github.com/tezedge/tezedge" }
storage = { tag = "v2.1.0", git = "https://github.com/tezedge/tezedge" }

pseudonode = { path = "../pseudonode" }
